# rm

./: .gitattributes  README.md
OpenCV/task/src/mine/: pnp.cpp
ROS2/learn/chapter2/session2/cmake/: CMakeLists.txt  ros2_cpp_node.cpp
ROS2/learn/chapter2/session2/g++/: first_node  first_node.cpp
ROS2/learn/chapter2/session2/make/: Makefile  first_ros2_node  first_ros2_node.cpp
ROS2/learn/chapter2/session3_ws/install/: local_setup.sh  setup.sh
ROS2/learn/chapter2/session3_ws/install/demo_cpp_pkg/lib/demo_cpp_pkg/: cpp_node  person_node
ROS2/learn/chapter2/session3_ws/install/demo_cpp_pkg/share/demo_cpp_pkg/: package.sh
ROS2/learn/chapter2/session3_ws/install/learn_pkg/lib/learn_pkg/: learn_thread
ROS2/learn/chapter2/session3_ws/install/learn_pkg/share/learn_pkg/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
ROS2/learn/chapter2/session3_ws/log/: latest_build
ROS2/learn/chapter2/session3_ws/src/demo_cpp_pkg/: CMakeLists.txt
ROS2/learn/chapter2/session3_ws/src/demo_cpp_pkg/src/: cpp_node.cpp  person_node.cpp
ROS2/learn/chapter2/session3_ws/src/learn_pkg/: CMakeLists.txt
ROS2/learn/chapter2/session3_ws/src/learn_pkg/src/: learn_auto.cpp  learn_functional.cpp  learn_shared_ptr.cpp  learn_thread.cpp
ROS2/learn/chapter3/fastdds_ws/install/: local_setup.sh  setup.sh
ROS2/learn/chapter3/fastdds_ws/install/fastcdr/lib/: libfastcdr.so.2
ROS2/learn/chapter3/fastdds_ws/install/fastcdr/share/fastcdr/: package.sh
ROS2/learn/chapter3/fastdds_ws/install/fastdds/lib/: libfastdds.so.3.4
ROS2/learn/chapter3/fastdds_ws/install/fastdds/share/fastdds/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
ROS2/learn/chapter3/fastdds_ws/install/foonathan_memory_vendor/share/foonathan_memory_vendor/: package.bash  package.sh  package.zsh
ROS2/learn/chapter3/fastdds_ws/log/: latest_build
ROS2/learn/chapter3/interface_ws/install/: local_setup.sh  setup.sh
ROS2/learn/chapter3/interface_ws/install/example_interfaces_rclcpp/lib/example_interfaces_rclcpp/: example_interfaces_control  example_interfaces_robot
ROS2/learn/chapter3/interface_ws/install/example_interfaces_rclcpp/share/example_interfaces_rclcpp/: package.sh
ROS2/learn/chapter3/interface_ws/install/example_ros2_interfaces/share/example_ros2_interfaces/: local_setup.sh  package.sh
ROS2/learn/chapter3/interface_ws/log/: latest_build
ROS2/learn/chapter3/interface_ws/src/example_interfaces_rclcpp/: CMakeLists.txt  interface_learn.md
ROS2/learn/chapter3/interface_ws/src/example_interfaces_rclcpp/src/: example_interfaces_control.cpp  example_interfaces_robot.cpp
ROS2/learn/chapter3/interface_ws/src/example_ros2_interfaces/: CMakeLists.txt
ROS2/learn/chapter3/service_ws/install/: local_setup.sh  setup.sh
ROS2/learn/chapter3/service_ws/install/add_service/lib/add_service/: add_client  add_server
ROS2/learn/chapter3/service_ws/install/add_service/share/add_service/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
ROS2/learn/chapter3/service_ws/install/demo_service/lib/demo_service/: patrol_client  turtle_control
ROS2/learn/chapter3/service_ws/install/demo_service/share/demo_service/: package.sh
ROS2/learn/chapter3/service_ws/install/service_interfaces/share/service_interfaces/: local_setup.sh  package.sh
ROS2/learn/chapter3/service_ws/log/: latest_build
ROS2/learn/chapter3/service_ws/src/add_service/: CMakeLists.txt  package.xml  service_learn.md
ROS2/learn/chapter3/service_ws/src/add_service/src/: add_client.cpp  add_server.cpp
ROS2/learn/chapter3/topic_ws/install/: local_setup.sh  setup.sh
ROS2/learn/chapter3/topic_ws/install/custom_interfaces/share/custom_interfaces/: local_setup.sh  package.sh
ROS2/learn/chapter3/topic_ws/install/custom_msg_nodes/lib/custom_msg_nodes/: publisher  subscriber
ROS2/learn/chapter3/topic_ws/install/custom_msg_nodes/share/custom_msg_nodes/: local_setup.sh  package.sh
ROS2/learn/chapter3/topic_ws/install/demo_turtlesim/lib/demo_turtlesim/: turtle_circle  turtle_control
ROS2/learn/chapter3/topic_ws/log/: latest_build
ROS2/learn/chapter3/topic_ws/src/example_topic/: CMakeLists.txt  package.xml
ROS2/learn/chapter3/topic_ws/src/example_topic/src/: one_message_publisher.cpp  one_message_subscribe.cpp  topic_publisher.cpp  topic_subscribe.cpp
ROS2/learn/chapter4/action_ws/install/: local_setup.sh  setup.sh
ROS2/learn/chapter4/action_ws/log/: latest_build
ROS2/learn/chapter4/action_ws/src/example_action_rclcpp/: CMakeLists.txt  action_learn.md  package.xml
ROS2/learn/chapter4/action_ws/src/example_action_rclcpp/src/: action_control.cpp  action_robot.cpp  robot.cpp
ROS2/learn/chapter4/action_ws/src/robot_control_interfaces/: CMakeLists.txt
ROS2/learn/chapter4/param_ws/install/: local_setup.sh  setup.sh
ROS2/learn/chapter4/param_ws/log/: latest_build
ROS2/learn/chapter4/param_ws/src/example_parameters_rclcpp/src/: parameters_basic.cpp
ROS2/learn/chapter5/jupyter/: hello.ipynb  ros2_test.ipynb
ROS2/learn/chapter5/tf_ws/install/: local_setup.sh  setup.sh
ROS2/learn/chapter5/tf_ws/log/: latest_build
ROS2/learn/chapter5/tf_ws/src/demo_cpp_tf/src/: dynamic_tf_broadcaster.cpp  static_tf_broadcaster.cpp  tf_listener.cpp
cplusplus/test_build/cmake_build/: CMakeLists.txt
cplusplus/test_build/g++_build/include/: functions.hpp
cplusplus/test_build/g++_build/src/: helloworld.cpp  main.cpp  sum.cpp
(+37 files in other folders)
